solved chat history overflow issue when Expand message sppears

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,7 @@ div.gallery::-webkit-scrollbar
 div.gallery::-webkit-scrollbar-thumb
 {
 	background-color: #0ae;
+	
 	background-image: -webkit-gradient(linear, 0 0, 0 100%,
 	                   color-stop(.5, rgba(255, 255, 255, .2)),
 					   color-stop(.5, transparent), to(transparent));
@@ -96,9 +97,10 @@ div.photo {
     height: 100px;
     position: relative;
     display: block;
-    padding: 10px;
+    padding: 0px;
     z-index: 2;
     top: 5px;
+    
 }
 div.photo img.enlarge {
     width: 42px;
@@ -348,6 +350,26 @@ div.chat_history{
     border: 1px solid white;
     height: 250px;
     border-radius: 3px;
+    overflow-y:scroll;
+}
+div.chat_history::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+div.chat_history::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+div.chat_history::-webkit-scrollbar-thumb
+{
+	background-color: #0ae;
+	
+	background-image: -webkit-gradient(linear, 0 0, 0 100%,
+	                   color-stop(.5, rgba(255, 255, 255, .2)),
+					   color-stop(.5, transparent), to(transparent));
 }
 div.chat_head{
     padding: 0px 0px;
@@ -514,5 +536,4 @@ tbody{
     right:0px;
     float:right;
 }
-
 /* end - alert dialog */
